Refactor: java 관련 코드 삭제 -> kotlin Q객체 관련 로직 재등록